# delhi-events

./: .gitignore  README.org  delhi_events.opam  dune  dune-project  events.html  events.ics  events.json  events.rss  index.html  package-lock.json  package.json  vite.config.mjs
.github/workflows/: update.yml
assets/: index-B5XlufF6.js  index-BiO8AmBT.js  index-CD3vdi8_.js  index-DyP2E_Bi.js  index-UHAoY5ld.js
data/: events.json
frontend/: Index.re  dune
frontend/components/: Event.re  EventFilter.re  EventList.re  dune
frontend/lib/: dune  event_helpers.ml  types.ml
lib/: cal.ml  delhi_events.ml  dune  events.ml  feed.ml  fetch.ml  generate.ml  html.ml
lib/html-assets/: styles.css
test/: dune
test/generate.t/: events.json  run.t
