(rule
 (with-stdout-to
  asset.ml
  (progn
   (echo "let styles = {css|")
   (cat html-assets/styles.css)
   (echo "|css}\n"))))

(library
 (name delhi_events)
 (libraries
  yojson
  tyxml
  icalendar
  unix
  ptime
  ptime.clock.os
  eio
  cohttp-eio
  eio_main
  tls-eio
  mirage-crypto-rng-eio
  lambdasoup
  cmarkit
  rss)
 (preprocess
  (pps ppx_deriving_yojson)))
